// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders alert without children 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#c4f2ca",
    }
  }
  icon={
    <Icon
      color="#46b655"
      name="error-outline"
      size={17}
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "180deg",
            },
          ],
        }
      }
    />
  }
  title={
    <Translation
      passThrough="Alert without children"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#196e25",
      },
      undefined,
    ]
  }
/>
`;

exports[`Alert renders danger type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "rgba(208, 2, 27, 0.15)",
    }
  }
  icon={
    <Icon
      color="#d0021b"
      name="warning"
      size={17}
    />
  }
  title={
    <Translation
      passThrough="Alert danger"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#d0021b",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders success type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "#c4f2ca",
    }
  }
  icon={
    <Icon
      color="#46b655"
      name="error-outline"
      size={17}
      style={
        Object {
          "transform": Array [
            Object {
              "rotate": "180deg",
            },
          ],
        }
      }
    />
  }
  title={
    <Translation
      passThrough="Alert success"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#196e25",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;

exports[`Alert renders warning type 1`] = `
<RenderAlert
  containerStyle={
    Object {
      "backgroundColor": "rgba(235, 157, 8, 0.15)",
    }
  }
  icon={
    <Icon
      color="#eb9d08"
      name="warning"
      size={17}
    />
  }
  title={
    <Translation
      passThrough="Alert warning"
    />
  }
  titleStyle={
    Array [
      Object {
        "color": "#eb9d08",
      },
      undefined,
    ]
  }
>
  <Translation
    passThrough="Alert body"
  />
</RenderAlert>
`;
